test/mulberry/Language/for_range_type_error.mulberry
# RUN: not mulberry-driver -typecheck %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  for i in false .. 3 {
  }

  0
}

# CHECK: error: type mismatch
